[package]
name = "solana-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.37.0"
solana-client = "1.17.31"
solana-sdk = "1.17.31"
futures = "0.3.30"
solana-transaction-status = "1.17.31"
web3 = "0.19.0"
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
